--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
           <img src="./assets/img/9.jpg" alt="">
         </div>
         <div class="swiper-slide">
-          <img src="./assets/img/11.jpg" alt="">
+          <img src="./assets/img/11.JPG" alt="">
         </div>
         <div class="swiper-slide">
           <img src="./assets/img/15.jpg" alt="">
         </div>
         <div class="swiper-slide">
-          <img src="./assets/img/6.jpg" alt="">
+          <img src="./assets/img/6.JPG" alt="">
         </div>
         <div class="swiper-slide">
           <img src="./assets/img/12.jpg" alt="">
